--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,6 +16,7 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
-proc-macro2 = "1.0"
+proc-macro-error = "1"
+proc-macro2 = "1"
 quote = "1"
-syn = "1"
+syn = { version = "1", features = ["extra-traits", "full", "parsing", "printing", "derive"] }
